# pyastra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
contrib/: topical_almuten.py
docs/source/: conf.py
pyastra/: __init__.py  angle.py  aspects.py  chart.py  const.py  context.py  datetime.py  geopos.py  lists.py  object.py  props.py  sign.py  utils.py
pyastra/core/: angle.py  aspects.py  chart.py  datetime.py  geopos.py  lists.py  object.py  sign.py
pyastra/definitions/: __init__.py  aspects.py  base.py  houses.py  planets.py  props.py  zodiac.py
pyastra/dignities/: __init__.py  accidental.py  essential.py  tables.py
pyastra/ephem/: __init__.py  builder.py  eph.py  ephem.py  swe.py  tools.py
pyastra/integrations/: llm.py  schemas.py
pyastra/predictives/: __init__.py  primarydirections.py  profections.py  returns.py
pyastra/protocols/: __init__.py  almutem.py  behavior.py  temperament.py
pyastra/tools/: __init__.py  arabicparts.py  chartdynamics.py  planetarytime.py
recipes/: accidentaldignities.py  almutem.py  arabicparts.py  aspects.py  behavior.py  chartdynamics.py  eclipses.py  essentialdignities.py  leapyears.py  llm_chart.py  planetarytime.py  primarydirections.py  profections.py  solarreturn.py  solaryears.py  temperament.py
scripts/: build.py  utils.py
tests/: test_angles.py  test_aspects.py  test_chart.py  test_ephem_ephem.py  test_ephem_swe.py  test_ephem_tools.py
tests/ephem/: test_ephem.py  test_swe.py  test_tools.py
tutorials/: chart.ipynb
(+6 files in other folders)
