[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyastra"
version = "0.3.0"

# --- Metadata ---
description = "Python library for Traditional Astrology"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Astrology", "Traditional Astrology"]

# --- Authoring ---
authors = [
    { name = "João Ventura", email = "joaojonesventura@gmail.com" },
]

# --- Classifiers ---
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

# --- Dependencies ---
dependencies = [
    "pyswisseph==2.10.3.2",
]

[project.urls]
Homepage = "https://github.com/joaoventura/pyastra"

# --- Sources ---
[tool.setuptools.packages.find]

[tool.setuptools.package-data]
pyastra = ["resources/README.md", "resources/swefiles/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
